Switched minecraftVersionOptions to FilteredList